# etl-simples

./: README.md  etl.py  pipeline.py  pyproject.toml
data/: sales_01.json  sales_02.json  sales_03.json
export/: export.csv  export.parquet  export.xlsx
