[tool.poetry]
name = "etl-json"
version = "0.1.0"
description = ""
authors = ["cesar.tomita <cesar.jun.tomita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
